try to fix timeline hidden on mobile

--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -6,16 +6,23 @@
 
 html {
     height: 100%;
+    box-sizing: border-box;
 }
 
 body {
+    margin: 0;
     height: 100%;
+
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 #root {
     height: 100%;
     width: 100vw;
-    height: 100dvh;
     width: 100dvw;
     overflow: hidden;
 }
